# talkie-mlx

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: prompts.jsonl
src/talkie_mlx/: __init__.py  chat_template.py  cli.py  config.py  convert.py  modeling_talkie_mlx.py  tokenization_talkie.py
tests/: conftest.py  test_chat_template.py  test_cli.py  test_convert.py  test_modeling.py  test_tokenizer.py
